--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "functions": {
-        "api/generate-twist.ts": {
-            "runtime": "nodejs18.x"
-        }
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
     }
+  }
 }
