--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_tBIDymHpSNM3K8FzMUQh3UM6kKXz","orgId":"team_S8i1YCVmFOijVrecGUNbHf2X"}
+{"projectId":"prj_nBsCPOshYmnj7tZvFBssvXJVzW9L","orgId":"team_S8i1YCVmFOijVrecGUNbHf2X","projectName":"musa-ia"}
